# pyjson5

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  DerivedGeneralCategory.txt.sha  MANIFEST.in  Makefile  README.rst  __init__.pyi  json5.pyx  json5_encoder.pyx  make_decoder_recursive_select.py  make_escape_dct.py  make_unicode_categories.py  native.hpp  pyjson5.pyx  pyproject.toml  requirements-dev.txt  requirements-readthedocs.txt  requirements.txt  run-minefield-test.py  run-tests.py  setup.cfg  setup.py  sha512sum.py  transcode-to-json.py
.github/: dependabot.yml
.github/workflows/: build_linux.yml  build_linux_v2.yml  build_linux_v3.yml  build_linux_wheels.yml  build_macos.yml  build_wheels.yml  build_wheels_alternative.yml  build_wheels_linux.yml  build_wheels_windows.yml  build_windows.yml  ci.yml  codeql-analysis.yml  compile_test.yml  wheels.yml
docs/: conf.py  decoder.rst  encoder.rst  exceptions.rst  index.rst  performance.rst
scripts/: make_unicode_categories.py  run-minefield-test.py  run-tests.py  run-threaded-test.py  sha512sum.py  transcode-to-json.py
src/: DESCRIPTION  VERSION  VERSION.inc  _constants.pyx  _decoder.pyx  _decoder_recursive_select.hpp  _encoder.pyx  _encoder_options.pyx  _escape_dct.hpp  _exceptions.pyx  _exceptions_decoder.pyx  _exceptions_encoder.pyx  _exports.pyx  _fast_float_compat.hpp  _imports.pyx  _legacy.pyx  _raise.pyx  _reader_callback.pyx  _reader_ucs.pyx  _readers.pyx  _stack_heap_string.hpp  _unicode.pyx  _unicode_cat_of.hpp  _unicode_mc.pyx  _unicode_mn.pyx  _writer_callback.pyx  _writer_reallocatable.pyx  _writers.pyx  native.hpp
src/pyjson5/: __init__.py  __init__.pyi
