[metadata]
# keep synchronous to requirements-readthedocs.txt
# keep synchronous to src/VERSION.inc
version = 1.6.3

name = pyjson5
description = JSON5 serializer and parser for Python 3 written in Cython.
url = https://github.com/Kijewski/pyjson5
project_urls =
    Changelog = https://github.com/Kijewski/pyjson5/blob/main/CHANGELOG.md
    Code = https://github.com/Kijewski/pyjson5
    Documentation = https://pyjson5.readthedocs.io/
    Download = https://pypi.org/project/pyjson5/
    Homepage = https://github.com/Kijewski/pyjson5
    Tracker = https://github.com/Kijewski/pyjson5/issues

author = René Kijewski
maintainer = René Kijewski
author_email = pypi.org@k6i.de
maintainer_email = pypi.org@k6i.de

long_description = file: README.rst
long_description_content_type = text/x-rst

license = Apache License 2.0
license_files = LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: JavaScript
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Text Processing :: General

[options]
zip_safe = False

python_requires = ~= 3.5
setup_requires =
    Cython
    setuptools

include_package_data = True
packages = pyjson5
package_dir =
    = src

[options.package_data]
pyjson5 = __init__.pyi, py.typed
